--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
     "@angular/core": "~12.1.0-",
+    "@angular/fire": "^7.1.0",
     "@angular/forms": "~12.1.0-",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "bootstrap": "^5.1.1",
+    "firebase": "^9.1.2",
     "moment": "^2.29.1",
-    "ngx-bootstrap": "^7.1.0",
+    "rxfire": "^6.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "underscore": "^1.13.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -31,6 +34,7 @@
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/underscore": "^1.11.3",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
